Build: 1.16.5-36.1.61 - Sat Jul 17 11:14:53 GMT 2021
	thelnfamous1:
		Patch several mob classes to let them use modded versions of their ranged weapons (#7845)

	baileyholl:
		Adds a damage float in Lightning Entity and patches Entity to use it. (#7849)

	thesilkminer:
		Fix missing userdev config for datagen runs (#7871)
		
		Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>

=========
Build: 1.16.5-36.1.58 - Sat Jul 17 02:45:36 GMT 2021
	awsomesauce239:
		Add Fishing bobber projectile impact event (#7842)

	onelemonyboi:
		Removes misleading Nullable annotation from canCreatureSpawn (#7840)

	onelemonyboi:
		Removes misapplied patch in Entity (#7841)

	onelemonyboi:
		Updates MouseHelper to allow for Horizontal Scroll to be recognized as Vertical Scroll (#7834)

	onelemonyboi:
		Corrects the assigning of mob kills, Fixes MC-121048 (#7836)

=========
Build: 1.16.5-36.1.53 - Sat Jul 17 02:30:47 GMT 2021
	diesieben07:
		Fix entities losing their scoreboard data when they are unloaded (#7826)

=========
Build: 1.16.5-36.1.52 - Sat Jul 17 02:23:52 GMT 2021
	diesieben07:
		[1.16] Allow blocks other than beds or respawn anchors to act as respawn points  (#7824)

=========
Build: 1.16.5-36.1.51 - Sat Jul 17 02:13:02 GMT 2021
	queekusme:
		Changed AbstractFurnaceTileEntity's canBurn and burn functions to use IRecipe's 'assemble' instead of 'getResultItem' (#7756)

	Judge40:
		[1.16.x] Remove redundant mobgriefing check in SmallFireaballEntity. (#7761)

	Judge40:
		Use MobGriefingEvent for PiglinEntity when determining whether Piglins want to pick up items. (#7762)

	diesieben07:
		Add IRecipeType parameter to burn time hooks (#7771)

	mike.kok:
		Fixes tryFluidTransfer_Internal to respect the FluidStack drainable when draining fluidSource. (#7782)

	personthecat:
		Synchronize `ResourcePackList#addPackFinder` (#7799)

	github:
		Fix vanilla rotation/mirroring issues (#7803)
		
		Patch minecraft to fix MC-227255 and MC-134110, which are block