@@ -1,67 +1,0 @@
-{
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "java",
-      "name": "runClient",
-      "request": "launch",
-      "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "sword_and_fire",
-      "cwd": "${workspaceFolder}\\run",
-      "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dREGISTRIES -XX:HeapDumpPath\u003dMojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump \"-Dos.name\u003dWindows 10\" -Dos.version\u003d10.0",
-      "args": "",
-      "env": {
-        "MOD_CLASSES": "examplemod%%${workspaceFolder}\\bin\\main;examplemod%%${workspaceFolder}\\bin\\main",
-        "MCP_MAPPINGS": "official_1.16.5",
-        "MCP_VERSION": "20210115.111550",
-        "FORGE_VERSION": "36.1.61",
-        "assetIndex": "1.16",
-        "assetDirectory": "C:\\Users\\gk\\.gradle\\caches\\forge_gradle\\assets",
-        "nativesDirectory": "${workspaceFolder}\\build\\natives",
-        "FORGE_GROUP": "net.minecraftforge",
-        "target": "fmluserdevclient",
-        "MC_VERSION": "1.16.5"
-      }
-    },
-    {
-      "type": "java",
-      "name": "runData",
-      "request": "launch",
-      "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "sword_and_fire",
-      "cwd": "${workspaceFolder}\\run",
-      "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dREGISTRIES",
-      "args": "--mod examplemod --all --output F:\\Workspace\\sword_and_fire\\src\\generated\\resources --existing F:\\Workspace\\sword_and_fire\\src\\main\\resources",
-      "env": {
-        "MOD_CLASSES": "examplemod%%${workspaceFolder}\\bin\\main;examplemod%%${workspaceFolder}\\bin\\main",
-        "MCP_MAPPINGS": "official_1.16.5",
-        "MCP_VERSION": "20210115.111550",
-        "FORGE_VERSION": "36.1.61",
-        "assetIndex": "1.16",
-        "assetDirectory": "/home/gradle/.gradle/caches/forge_gradle/assets",
-        "FORGE_GROUP": "net.minecraftforge",
-        "target": "fmluserdevdata",
-        "MC_VERSION": "1.16.5"
-      }
-    },
-    {
-      "type": "java",
-      "name": "runServer",
-      "request": "launch",
-      "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "sword_and_fire",
-      "cwd": "${workspaceFolder}\\run",
-      "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dREGISTRIES",
-      "args": "",
-      "env": {
-        "MOD_CLASSES": "examplemod%%${workspaceFolder}\\bin\\main;examplemod%%${workspaceFolder}\\bin\\main",
-        "MCP_MAPPINGS": "official_1.16.5",
-        "MCP_VERSION": "20210115.111550",
-        "FORGE_VERSION": "36.1.61",
-        "FORGE_GROUP": "net.minecraftforge",
-        "target": "fmluserdevserver",
-        "MC_VERSION": "1.16.5"
-      }
-    }
-  ]
-}
