@@ -1,0 +1,7 @@
+package com.appledeath.swordandfire;
+
+import net.minecraftforge.fml.common.Mod;
+
+@Mod(Utils.MOD_ID)
+public class SwordAndFire {
+}
