@@ -1,0 +1,5 @@
+package com.appledeath.swordandfire;
+
+public class Utils {
+    public static final String MOD_ID = "swordandfire";
+}
